--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html (COMPLETO) -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -177,7 +178,7 @@
                 </p>
                 <div class="projects-grid">
                     <a href="portfolios/data-analysis/" target="_blank" class="project-card-link" data-aos="fade-up">
-                        <div class="project-card">
+                        <div class="project-card card-accent data-analysis">
                             <i class="fas fa-chart-bar project-icon"></i>
                             <div class="project-content">
                                 <h3>Análise de Dados</h3>
@@ -185,8 +186,9 @@
                             </div>
                         </div>
                     </a>
+
                     <a href="portfolios/data-engineering/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="200">
-                        <div class="project-card">
+                        <div class="project-card card-accent data-engineering">
                             <i class="fas fa-project-diagram project-icon"></i>
                             <div class="project-content">
                                 <h3>Engenharia de Dados</h3>
@@ -194,17 +196,9 @@
                             </div>
                         </div>
                     </a>
-                     <a href="portfolios/analytics-engineering/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="200">
-                        <div class="project-card">
-                            <i class="fas fa-layer-group project-icon"></i>
-                            <div class="project-content">
-                                <h3>Engenharia Analítica</h3>
-                                <p>Criação de modelos de dados robustos e confiáveis, focados em qualidade, testes e governança para suportar a análise de negócio.</p>
-                            </div>
-                        </div>
-                    </a>
+
                     <a href="portfolios/data-science/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="300">
-                        <div class="project-card">
+                        <div class="project-card card-accent data-science">
                             <i class="fas fa-brain project-icon"></i>
                             <div class="project-content">
                                 <h3>Ciência de Dados</h3>
@@ -212,8 +206,29 @@
                             </div>
                         </div>
                     </a>
+
+                    <a href="portfolios/analytics-engineering/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="200">
+                        <div class="project-card card-accent analytics-engineering">
+                            <i class="fas fa-layer-group project-icon"></i>
+                            <div class="project-content">
+                                <h3>Engenharia Analítica</h3>
+                                <p>Criação de modelos de dados robustos e confiáveis, focados em qualidade, testes e governança para suportar a análise de negócio.</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="portfolios/mechanical/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="300">
+                        <div class="project-card card-accent mechanical">
+                            <i class="fas fa-cogs project-icon"></i>
+                            <div class="project-content">
+                                <h3>Engenharia Mecânica | Projetos Mecânicos</h3>
+                                <p>Modelagem 3D, simulações e desenvolvimento de produtos. Veja projetos criados com SolidWorks, AutoCAD e outras ferramentas.</p>
+                            </div>
+                        </div>
+                    </a>
+
                     <a href="portfolios/frontend/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="200">
-                        <div class="project-card">
+                        <div class="project-card card-accent frontend">
                             <i class="fab fa-vuejs project-icon"></i>
                             <div class="project-content">
                                 <h3>Desenvolvimento Front-End</h3>
@@ -221,8 +236,9 @@
                             </div>
                         </div>
                     </a>
+
                     <a href="portfolios/backend/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="500">
-                        <div class="project-card">
+                        <div class="project-card card-accent backend">
                             <i class="fas fa-server project-icon"></i>
                             <div class="project-content">
                                 <h3>Desenvolvimento Back-End</h3>
@@ -230,8 +246,9 @@
                             </div>
                         </div>
                     </a>
+
                     <a href="portfolios/automation/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="600">
-                        <div class="project-card">
+                        <div class="project-card card-accent automation">
                             <i class="fas fa-robot project-icon"></i>
                             <div class="project-content">
                                 <h3>Automação de Processos</h3>
@@ -239,8 +256,9 @@
                             </div>
                         </div>
                     </a>
+
                     <a href="portfolios/it-support/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="100">
-                        <div class="project-card">
+                        <div class="project-card card-accent it-support">
                             <i class="fas fa-headset project-icon"></i>
                             <div class="project-content">
                                 <h3>Técnico em Informática</h3>
@@ -248,15 +266,8 @@
                             </div>
                         </div>
                     </a>
-                    <a href="portfolios/mechanical/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="300">
-                        <div class="project-card">
-                            <i class="fas fa-cogs project-icon"></i>
-                            <div class="project-content">
-                                <h3>Engenharia Mecânica</h3>
-                                <p>Modelagem 3D, simulações e desenvolvimento de produtos. Veja projetos criados com SolidWorks, AutoCAD e outras ferramentas.</p>
-                            </div>
-                        </div>
-                    </a>
+                </div>
+
                 </div>
             </div>
         </section>
@@ -412,66 +423,94 @@
                 <h2 class="section-title certifications-title">Certificações</h2>
                 <div class="certifications-grid">
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="100">
-                        <i class="fas fa-certificate"></i>
+                        <i class="fas fa-chart-pie"></i>
                         <p>Aplicação do Power BI para Aprimoramento da Gestão</p>
                         <span>Escola Nacional de Administração Pública - ENAP</span>
                     </div>
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
-                        <i class="fas fa-certificate"></i>
+                        <i class="fas fa-chart-bar"></i>
                         <p>Power BI</p>
                         <span>Fundacao Sousandrade de Apoio ao Desenvolvimento da Ufma</span>
                     </div>
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
-                        <i class="fas fa-certificate"></i>
+                        <i class="fas fa-database"></i>
                         <p>Gerenciar Dados com o Microsoft 365</p>
                         <span>ENAP</span>
                     </div>
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="200">
-                        <i class="fas fa-certificate"></i>
+                        <i class="fas fa-gamepad"></i>
                         <p>Desenvolvedor de Jogos Eletrônicos</p>
                         <span>Instituto Federal do Maranhão - IFMA</span>
                     </div>
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="300">
-                        <i class="fas fa-certificate"></i>
+                        <i class="fas fa-headset"></i>
                         <p>Suporte em TI do Google</p>
                         <span>Google/Coursera</span>
                     </div>
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
-                        <i class="fas fa-certificate"></i>
+                        <i class="fas fa-microchip"></i>
                         <p>Arquitetura de computadores</p>
                         <span>Alura</span>
                     </div>
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
-                        <i class="fas fa-certificate"></i>
+                        <i class="fas fa-network-wired"></i>
                         <p>Estrutura e Funcionamento das Redes de Computadores</p>
                         <span>Google/Coursera</span>
                     </div>
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
-                        <i class="fas fa-certificate"></i>
+                        <i class="fas fa-rocket"></i>
                         <p>Tech Academy</p>
                         <span>Startse</span>
                     </div>
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
-                        <i class="fas fa-certificate"></i>
+                        <i class="fas fa-tools"></i>
                         <p>Suporte Técnico em Informática</p>
                         <span>Escola SENAI de Informática</span>
                     </div>
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
-                        <i class="fas fa-certificate"></i>
+                        <i class="fas fa-desktop"></i>
                         <p>Sistemas Operacionais</p>
                         <span>Google/Coursera</span>
                     </div>
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
-                        <i class="fas fa-certificate"></i>
+                        <i class="fas fa-server"></i>
                         <p>Administração de Sistemas e Serviços de Infraestrutura de TI</p>
                         <span>Google/Coursera</span>
                     </div>
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
-                        <i class="fas fa-certificate"></i>
+                        <i class="fas fa-lock"></i>
                         <p>Segurança de TI</p>
                         <span>Google/Coursera</span>
                     </div>
                 </div>
+
+                <div class="linkedin-certs premium" data-aos="fade-up" data-aos-delay="150">
+                    <div class="linkedin-certs-header">
+                        <h3 class="linkedin-certs-title">Mais certificações no LinkedIn</h3>
+                        <p class="linkedin-certs-desc">Acesse a lista completa e sempre atualizada no meu perfil.</p>
+                    </div>
+
+                    <div class="linkedin-certs-card premium">
+                        <div class="linkedin-certs-card-left">
+                            <div class="linkedin-badge" aria-hidden="true">
+                                <i class="fab fa-linkedin"></i>
+                            </div>
+
+                            <div class="linkedin-text">
+                                <p class="linkedin-certs-card-title">Ver todas as certificações no meu LinkedIn</p>
+                                <p class="linkedin-certs-card-subtitle">Atualizado automaticamente conforme novas conquistas.</p>
+                            </div>
+                        </div>
+
+                        <a class="btn btn-linkedin"
+                           href="https://www.linkedin.com/in/luissilvak/details/certifications/"
+                           target="_blank"
+                           rel="noopener">
+                            Abrir no LinkedIn <i class="fas fa-arrow-up-right-from-square"></i>
+                        </a>
+                    </div>
+                </div>
+
             </div>
         </section>
 
