Adicionando correções e atualizações

--- a/portfolios/data-analysis/index.html
+++ b/portfolios/data-analysis/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+<body class="theme-data-analysis">
     <div class="portfolio-container">
         <aside class="sidebar">
             <a href="../../index.html" class="back-button">&larr; Voltar ao Início</a>
@@ -23,13 +23,20 @@
                 <a href="https://www.linkedin.com/in/luissilvak" target="_blank">
                     <i class="fab fa-linkedin"></i> LinkedIn
                 </a>
+
                 <a href="https://github.com/LuiSilvak" target="_blank">
                     <i class="fab fa-github"></i> GitHub
                 </a>
-                <a href="../../assets/docs/Luis_Silva_Curriculo.pdf" target="_blank">
-                    <i class="fas fa-file-alt"></i> Currículo
-                </a> <!-- Link do Currículo -->
+
+                <a href="../../assets/docs/Luis_Silva_CV_Analise_Dados_PT.pdf" target="_blank">
+                    <i class="fas fa-file-pdf"></i> Currículo (PT)
+                </a>
+
+                <a href="../../assets/docs/Luis_Silva_CV_Data_Analyst_EN.pdf" target="_blank">
+                    <i class="fas fa-language"></i> Resume (EN)
+                </a>
             </nav>
+
 
         </aside>
 
