--- a/portfolios/data-engineering/index.html
+++ b/portfolios/data-engineering/index.html
@@ -9,46 +9,54 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+
+<body class="theme-data-engineering">
     <div class="portfolio-container">
         <aside class="sidebar">
             <a href="../../index.html" class="back-button">&larr; Voltar ao Início</a>
+
             <div class="profile">
                 <img src="../../assets/img/luis-silva-perfil.png" alt="Foto de Luís Silva" class="profile-photo">
                 <h1>Luís Silva</h1>
                 <p>Engenharia de Dados</p>
             </div>
+
             <nav class="sidebar-nav">
-                <a href="https://www.linkedin.com/in/luissilvak" target="_blank">
+                <a href="https://www.linkedin.com/in/luissilvak" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-linkedin"></i> LinkedIn
                 </a>
-                <a href="https://github.com/LuiSilvak" target="_blank">
+
+                <a href="https://github.com/LuiSilvak" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-github"></i> GitHub
                 </a>
-                <a href="../../assets/docs/Luis_Silva_Curriculo.pdf" target="_blank">
-                    <i class="fas fa-file-alt"></i> Currículo
-                </a> <!-- Link do Currículo -->
+
+                <a href="../../assets/docs/Luis_Silva_CV_Engenharia_Dados_PT.pdf" target="_blank" rel="noopener noreferrer">
+                    <i class="fas fa-file-pdf"></i> Currículo (PT)
+                </a>
+
+                <a href="../../assets/docs/Luis_Silva_CV_Data_Engineer_EN.pdf" target="_blank" rel="noopener noreferrer">
+                    <i class="fas fa-language"></i> Resume (EN)
+                </a>
             </nav>
         </aside>
 
         <main class="main-content">
             <header class="main-header">
                 <h2>Portfólio de Engenharia de Dados</h2>
-                <p>Projetos envolvendo Business Intelligence, automação com Python, ETL e visualização de dados para gerar insights de negócio.</p>
+                <p>Projetos envolvendo pipelines de dados, ETL/ELT, modelagem, orquestração e automação para garantir qualidade e disponibilidade da informação.</p>
             </header>
 
             <div class="controls">
                 <div class="filters">
                     <button class="filter-btn active" data-filter="todos">Todos</button>
-                    <button class="filter-btn" data-filter="Power BI">Power BI</button>
+                    <button class="filter-btn" data-filter="ETL">ETL</button>
                     <button class="filter-btn" data-filter="Python">Python</button>
                     <button class="filter-btn" data-filter="SQL">SQL</button>
                 </div>
                 <input type="text" id="searchInput" placeholder="Pesquisar projeto...">
             </div>
 
-            <section id="projects-grid" class="projects-grid">
-                </section>
+            <section id="projects-grid" class="projects-grid"></section>
         </main>
     </div>
 
@@ -57,10 +65,8 @@
             <span class="close-button">&times;</span>
             <h3 id="modalTitle"></h3>
             <p id="modalDescription"></p>
-            <div class="modal-body">
-                </div>
-            <div id="modalLinks" class="modal-links">
-                </div>
+            <div class="modal-body"></div>
+            <div id="modalLinks" class="modal-links"></div>
         </div>
     </div>
 
