--- a/portfolios/data-science/index.html
+++ b/portfolios/data-science/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+
+<body class="theme-data-science">
     <div class="portfolio-container">
         <aside class="sidebar">
             <a href="../../index.html" class="back-button">&larr; Voltar ao Início</a>
@@ -22,33 +23,38 @@
                 <a href="https://www.linkedin.com/in/luissilvak" target="_blank">
                     <i class="fab fa-linkedin"></i> LinkedIn
                 </a>
+
                 <a href="https://github.com/LuiSilvak" target="_blank">
                     <i class="fab fa-github"></i> GitHub
                 </a>
-                <a href="../../assets/docs/Luis_Silva_Curriculo.pdf" target="_blank">
-                    <i class="fas fa-file-alt"></i> Currículo
-                </a> <!-- Link do Currículo -->
+
+                <a href="../../assets/docs/Luis_Silva_CV_Analise_Dados_PT.pdf" target="_blank">
+                    <i class="fas fa-file-pdf"></i> Currículo (PT)
+                </a>
+
+                <a href="../../assets/docs/Luis_Silva_CV_Data_Analyst_EN.pdf" target="_blank">
+                    <i class="fas fa-language"></i> Resume (EN)
+                </a>
             </nav>
         </aside>
 
         <main class="main-content">
             <header class="main-header">
                 <h2>Portfólio de Ciência de Dados</h2>
-                <p>Projetos envolvendo Business Intelligence, automação com Python, ETL e visualização de dados para gerar insights de negócio.</p>
+                <p>Projetos de Machine Learning, estatística, NLP, visão computacional, séries temporais e MLOps para gerar valor em produtos e negócios.</p>
             </header>
 
             <div class="controls">
                 <div class="filters">
                     <button class="filter-btn active" data-filter="todos">Todos</button>
-                    <button class="filter-btn" data-filter="Power BI">Power BI</button>
                     <button class="filter-btn" data-filter="Python">Python</button>
-                    <button class="filter-btn" data-filter="SQL">SQL</button>
+                    <button class="filter-btn" data-filter="Machine Learning">Machine Learning</button>
+                    <button class="filter-btn" data-filter="NLP">NLP</button>
                 </div>
                 <input type="text" id="searchInput" placeholder="Pesquisar projeto...">
             </div>
 
-            <section id="projects-grid" class="projects-grid">
-                </section>
+            <section id="projects-grid" class="projects-grid"></section>
         </main>
     </div>
 
@@ -57,10 +63,8 @@
             <span class="close-button">&times;</span>
             <h3 id="modalTitle"></h3>
             <p id="modalDescription"></p>
-            <div class="modal-body">
-                </div>
-            <div id="modalLinks" class="modal-links">
-                </div>
+            <div class="modal-body"></div>
+            <div id="modalLinks" class="modal-links"></div>
         </div>
     </div>
 
