--- a/portfolios/frontend/index.html
+++ b/portfolios/frontend/index.html
@@ -4,37 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luís Silva | Portfólio de Desenvolvimento Front-End</title>
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+
+<!-- IMPORTANTE: classe do tema -->
+<body class="theme-frontend">
     <div class="portfolio-container">
         <aside class="sidebar">
             <a href="../../index.html" class="back-button">&larr; Voltar ao Início</a>
+
             <div class="profile">
                 <img src="../../assets/img/luis-silva-perfil.png" alt="Foto de Luís Silva" class="profile-photo">
                 <h1>Luís Silva</h1>
-                <p>Desenvolvedor Front-End</p>
+                <p>Desenvolvimento Front-End</p>
             </div>
+
             <nav class="sidebar-nav">
                 <a href="https://www.linkedin.com/in/luissilvak" target="_blank">
                     <i class="fab fa-linkedin"></i> LinkedIn
                 </a>
+
                 <a href="https://github.com/LuiSilvak" target="_blank">
                     <i class="fab fa-github"></i> GitHub
                 </a>
-                <a href="../../assets/docs/Luis_Silva_Curriculo.pdf" target="_blank">
-                    <i class="fas fa-file-alt"></i> Currículo
-                </a> <!-- Link do Currículo -->
+
+                <a href="../../assets/docs/Luis_Silva_CV_Analise_Dados_PT.pdf" target="_blank">
+                    <i class="fas fa-file-pdf"></i> Currículo (PT)
+                </a>
+
+                <a href="../../assets/docs/Luis_Silva_CV_Data_Analyst_EN.pdf" target="_blank">
+                    <i class="fas fa-language"></i> Resume (EN)
+                </a>
             </nav>
         </aside>
 
         <main class="main-content">
             <header class="main-header">
                 <h2>Portfólio de Desenvolvimento Front-End</h2>
-                <p>Projetos focados na criação de interfaces de usuário interativas, responsivas e performáticas, utilizando tecnologias modernas como Vue.js.</p>
+                <p>Projetos com interfaces modernas, aplicações SPA, consumo de APIs, design system, responsividade e boas práticas de UX/UI.</p>
             </header>
 
             <div class="controls">
@@ -42,14 +55,14 @@
                     <button class="filter-btn active" data-filter="todos">Todos</button>
                     <button class="filter-btn" data-filter="Vue.js">Vue.js</button>
                     <button class="filter-btn" data-filter="JavaScript">JavaScript</button>
-                    <button class="filter-btn" data-filter="API">API</button>
                     <button class="filter-btn" data-filter="CSS">CSS</button>
+                    <button class="filter-btn" data-filter="HTML">HTML</button>
+                    <button class="filter-btn" data-filter="API">API</button>
                 </div>
                 <input type="text" id="searchInput" placeholder="Pesquisar projeto...">
             </div>
 
-            <section id="projects-grid" class="projects-grid">
-                </section>
+            <section id="projects-grid" class="projects-grid"></section>
         </main>
     </div>
 
