--- a/portfolios/it-support/index.html
+++ b/portfolios/it-support/index.html
@@ -22,12 +22,18 @@
                 <a href="https://www.linkedin.com/in/luissilvak" target="_blank">
                     <i class="fab fa-linkedin"></i> LinkedIn
                 </a>
+
                 <a href="https://github.com/LuiSilvak" target="_blank">
                     <i class="fab fa-github"></i> GitHub
                 </a>
-                <a href="../../assets/docs/Luis_Silva_Curriculo.pdf" target="_blank">
-                    <i class="fas fa-file-alt"></i> Currículo
-                </a> <!-- Link do Currículo -->
+
+                <a href="../../assets/docs/Luis_Silva_CV_Analise_Dados_PT.pdf" target="_blank">
+                    <i class="fas fa-file-pdf"></i> Currículo (PT)
+                </a>
+
+                <a href="../../assets/docs/Luis_Silva_CV_Data_Analyst_EN.pdf" target="_blank">
+                    <i class="fas fa-language"></i> Resume (EN)
+                </a>
             </nav>
         </aside>
 
