--- a/portfolios/mechanical/index.html
+++ b/portfolios/mechanical/index.html
@@ -1,68 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luís Silva | Portfólio de Engenharia Mecânica</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-    <link rel="stylesheet" href="./css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Luís Silva | Portfólio de Engenharia Mecânica</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
+  <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
-    <div class="portfolio-container">
-        <aside class="sidebar">
-            <a href="../../index.html" class="back-button">&larr; Voltar ao Início</a>
-            <div class="profile">
-                <img src="../../assets/img/luis-silva-perfil.png" alt="Foto de Luís Silva" class="profile-photo">
-                <h1>Luís Silva</h1>
-                <p>Engenheiro Mecânico</p>
-            </div>
-            <nav class="sidebar-nav">
-                <a href="https://www.linkedin.com/in/luissilvak" target="_blank">
-                    <i class="fab fa-linkedin"></i> LinkedIn
-                </a>
-                <a href="https://github.com/LuiSilvak" target="_blank">
-                    <i class="fab fa-github"></i> GitHub
-                </a>
-                <a href="../../assets/docs/Luis_Silva_Curriculo.pdf" target="_blank">
-                    <i class="fas fa-file-alt"></i> Currículo
-                </a> <!-- Link do Currículo -->
-            </nav>
-        </aside>
 
-        <main class="main-content">
-            <header class="main-header">
-                <h2>Portfólio de Engenharia Mecânica</h2>
-                <p>Projetos de modelagem 3D, simulações por elementos finitos (FEA), detalhamento técnico e desenvolvimento de produtos mecânicos.</p>
-            </header>
+<!-- IMPORTANTE: tema da página -->
+<body class="theme-mechanical-engineering">
+  <div class="portfolio-container">
+    <aside class="sidebar">
+      <a href="../../index.html" class="back-button">&larr; Voltar ao Início</a>
 
-            <div class="controls">
-                <div class="filters">
-                    <button class="filter-btn active" data-filter="todos">Todos</button>
-                    <button class="filter-btn" data-filter="SolidWorks">SolidWorks</button>
-                    <button class="filter-btn" data-filter="Simulação FEA">Simulação FEA</button>
-                    <button class="filter-btn" data-filter="Desenho Técnico">Desenho Técnico</button>
-                    <button class="filter-btn" data-filter="Modelagem 3D">Modelagem 3D</button>
-                </div>
-                <input type="text" id="searchInput" placeholder="Pesquisar projeto...">
-            </div>
+      <div class="profile">
+        <img src="../../assets/img/luis-silva-perfil.png" alt="Foto de Luís Silva" class="profile-photo">
+        <h1>Luís Silva</h1>
+        <p>Engenheiro Mecânico</p>
+      </div>
 
-            <section id="projects-grid" class="projects-grid">
-                </section>
-        </main>
-    </div>
+      <nav class="sidebar-nav">
+        <a href="https://www.linkedin.com/in/luissilvak" target="_blank">
+          <i class="fab fa-linkedin"></i> LinkedIn
+        </a>
 
-    <div id="projectModal" class="modal">
-        <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <h3 id="modalTitle"></h3>
-            <p id="modalDescription"></p>
-            <div class="modal-body"></div>
-            <div id="modalLinks" class="modal-links"></div>
+        <a href="https://github.com/LuiSilvak" target="_blank">
+          <i class="fab fa-github"></i> GitHub
+        </a>
+
+        <a href="../../assets/docs/Luis_Silva_CV_Analise_Dados_PT.pdf" target="_blank">
+          <i class="fas fa-file-pdf"></i> Currículo (PT)
+        </a>
+
+        <a href="../../assets/docs/Luis_Silva_CV_Data_Analyst_EN.pdf" target="_blank">
+          <i class="fas fa-language"></i> Resume (EN)
+        </a>
+      </nav>
+    </aside>
+
+    <main class="main-content">
+      <header class="main-header">
+        <h2>Portfólio de Engenharia Mecânica</h2>
+        <p>Projetos de modelagem 3D, simulações por elementos finitos (FEA), detalhamento técnico e desenvolvimento de produtos mecânicos.</p>
+      </header>
+
+      <div class="controls">
+        <div class="filters">
+          <button class="filter-btn active" data-filter="todos">Todos</button>
+          <button class="filter-btn" data-filter="SolidWorks">SolidWorks</button>
+          <button class="filter-btn" data-filter="Simulação FEA">Simulação FEA</button>
+          <button class="filter-btn" data-filter="Desenho Técnico">Desenho Técnico</button>
+          <button class="filter-btn" data-filter="Modelagem 3D">Modelagem 3D</button>
         </div>
-    </div>
 
-    <script type="module" src="./js/script.js"></script>
+        <input type="text" id="searchInput" placeholder="Pesquisar projeto...">
+      </div>
+
+      <section id="projects-grid" class="projects-grid"></section>
+    </main>
+  </div>
+
+  <div id="projectModal" class="modal">
+    <div class="modal-content">
+      <span class="close-button">&times;</span>
+      <h3 id="modalTitle"></h3>
+      <p id="modalDescription"></p>
+      <div class="modal-body"></div>
+      <div id="modalLinks" class="modal-links"></div>
+    </div>
+  </div>
+
+  <script type="module" src="./js/script.js"></script>
 </body>
 </html>
