--- a/portfolios/frontend/index.html
+++ b/portfolios/frontend/index.html
@@ -17,7 +17,13 @@
 <body class="theme-frontend">
     <div class="portfolio-container">
         <aside class="sidebar">
-            <a href="../../index.html" class="back-button">&larr; Voltar ao Início</a>
+            <a href="../../index.html" class="back-button" aria-label="Voltar ao início">
+  <span class="back-icon" aria-hidden="true">
+    <i class="fas fa-arrow-left"></i>
+  </span>
+  <span class="back-text">Voltar ao Início</span>
+</a>
+
 
             <div class="profile">
                 <img src="../../assets/img/luis-silva-perfil.png" alt="Foto de Luís Silva" class="profile-photo">
