--- a/portfolios/automation/index.html
+++ b/portfolios/automation/index.html
@@ -1,74 +1,92 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luís Silva | Automação de Processos</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-    <link rel="stylesheet" href="./css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Luís Silva | Portfólio de Automação de Processos</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
-<body>
-    <div class="portfolio-container">
-        <aside class="sidebar">
-            <a href="../../index.html" class="back-button">&larr; Voltar ao Início</a>
-            <div class="profile">
-                <img src="../../assets/img/luis-silva-perfil.png" alt="Foto de Luís Silva" class="profile-photo">
-                <h1>Luís Silva</h1>
-                <p>Automação de Processos</p>
-            </div>
-            <nav class="sidebar-nav">
-                <a href="https://www.linkedin.com/in/luissilvak" target="_blank">
-                    <i class="fab fa-linkedin"></i> LinkedIn
-                </a>
 
-                <a href="https://github.com/LuiSilvak" target="_blank">
-                    <i class="fab fa-github"></i> GitHub
-                </a>
+<body class="theme-automation">
+  <div class="portfolio-container">
+    <aside class="sidebar">
+      <a href="../../index.html" class="back-button" aria-label="Voltar ao início">
+  <span class="back-icon" aria-hidden="true">
+    <i class="fas fa-arrow-left"></i>
+  </span>
+  <span class="back-text">Voltar ao Início</span>
+</a>
 
-                <a href="../../assets/docs/Luis_Silva_CV_Analise_Dados_PT.pdf" target="_blank">
-                    <i class="fas fa-file-pdf"></i> Currículo (PT)
-                </a>
 
-                <a href="../../assets/docs/Luis_Silva_CV_Data_Analyst_EN.pdf" target="_blank">
-                    <i class="fas fa-language"></i> Resume (EN)
-                </a>
-            </nav>
-        </aside>
+      <div class="profile">
+        <img src="../../assets/img/luis-silva-perfil.png" alt="Foto de Luís Silva" class="profile-photo">
+        <h1>Luís Silva</h1>
+        <p>Automação de Processos</p>
+      </div>
 
-        <main class="main-content">
-            <header class="main-header">
-                <h2>Portfólio de Automação de Processos</h2>
-                <p>Soluções práticas em infraestrutura, automação de rotinas, segurança e manutenção de sistemas para garantir a eficiência operacional.</p>
-            </header>
+      <nav class="sidebar-nav">
+        <a href="https://www.linkedin.com/in/luissilvak" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-linkedin"></i> LinkedIn
+        </a>
 
-            <div class="controls">
-                <div class="filters">
-                    <button class="filter-btn active" data-filter="todos">Todos</button>
-                    <button class="filter-btn" data-filter="Automação">Automação</button>
-                    <button class="filter-btn" data-filter="Redes">Redes</button>
-                    <button class="filter-btn" data-filter="Segurança">Segurança</button>
-                    <button class="filter-btn" data-filter="Hardware">Hardware</button>
-                </div>
-                <input type="text" id="searchInput" placeholder="Pesquisar projeto...">
-            </div>
+        <a href="https://github.com/LuiSilvak" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-github"></i> GitHub
+        </a>
 
-            <section id="projects-grid" class="projects-grid">
-                </section>
-        </main>
-    </div>
+        <a href="../../assets/docs/Luis_Silva_CV_Analise_Dados_PT.pdf" target="_blank" rel="noopener noreferrer">
+          <i class="fas fa-file-pdf"></i> Currículo (PT)
+        </a>
 
-    <div id="projectModal" class="modal">
-        <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <h3 id="modalTitle"></h3>
-            <p id="modalDescription"></p>
-            <div class="modal-body"></div>
-            <div id="modalLinks" class="modal-links"></div>
+        <a href="../../assets/docs/Luis_Silva_CV_Data_Analyst_EN.pdf" target="_blank" rel="noopener noreferrer">
+          <i class="fas fa-language"></i> Resume (EN)
+        </a>
+      </nav>
+    </aside>
+
+    <main class="main-content">
+      <header class="main-header">
+        <h2>Portfólio de Automação de Processos</h2>
+        <p>
+          Projetos com automação (RPA), scripts e robôs em Python, integrações com APIs, web scraping
+          e geração automática de relatórios e indicadores.
+        </p>
+      </header>
+
+      <div class="controls">
+        <div class="filters">
+          <button class="filter-btn active" data-filter="todos">Todos</button>
+          <button class="filter-btn" data-filter="Python">Python</button>
+          <button class="filter-btn" data-filter="RPA">RPA</button>
+          <button class="filter-btn" data-filter="API">API</button>
+          <button class="filter-btn" data-filter="Web Scraping">Web Scraping</button>
+          <button class="filter-btn" data-filter="ETL">ETL</button>
         </div>
-    </div>
 
-    <script type="module" src="./js/script.js"></script>
+        <input type="text" id="searchInput" placeholder="Pesquisar projeto..." />
+      </div>
+
+      <section id="projects-grid" class="projects-grid"></section>
+    </main>
+  </div>
+
+  <div id="projectModal" class="modal">
+    <div class="modal-content">
+      <span class="close-button">&times;</span>
+      <h3 id="modalTitle"></h3>
+      <p id="modalDescription"></p>
+
+      <div class="modal-body"></div>
+
+      <div id="modalLinks" class="modal-links"></div>
+    </div>
+  </div>
+
+  <script type="module" src="./js/script.js"></script>
 </body>
 </html>
